# alleycat-upbge

./: Pipfile  alleycat.blend  config.json
addon/: alleycat_addon.py
alleycat/actor/: __init__.py  character.py  control.py  locomotion.py  vision.py
alleycat/animation/: __init__.py  animator.py  context.py  loop.py  result.py
alleycat/camera/: __init__.py  control.py  firstperson.py  manager.py  perspective.py  (+3 more)
core/: README.md  pyproject.toml  setup.py
core/alleycat/common/: __init__.py  disposable.py  errors.py  geometry.py  logging.py  mapping.py  validators.py
core/alleycat/core/: __init__.py  argument.py  base.py  bootstrap.py  feature.py  property.py
core/alleycat/event/: __init__.py  coroutine.py  event.py  scheduler.py
core/alleycat/input/: __init__.py  event.py  mouse.py
core/alleycat/lifecycle/: __init__.py  disposable.py  startable.py  updatable.py
core/alleycat/state/: __init__.py  manager.py
core/alleycat/test/: __init__.py  asserts.py  bge.py  bpy.py  mathutils.py  mock_bge.py  mock_bpy.py
core/tests/common/: test_disposable.py  test_geometry.py  test_mapping.py  test_validators.py
core/tests/core/: test_args.py  test_args_maybe.py  test_args_optional.py  test_args_result.py  test_bootstrap.py  test_property.py  test_property_maybe.py  test_property_optional.py
core/tests/event/: conftest.py  test_coroutine.py  test_scheduler.py
core/tests/input/: conftest.py  test_mouse.py
core/tests/lifecycle/: test_disposable.py  test_startable.py
core/tests/state/: test_manager.py
core/tests/test/: test_asserts.py
tests/: __init__.py
(+107 files in other folders)
