[tool.poetry]
name = "alleycat-core"
version = "0.1.0"
description = "Core packages of AlleyCat framework."
authors = ["Xavier Cho <mysticfallband@gmail.com>"]
license = "GNU General Public License Version 3"
packages = [
    { include = "alleycat" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
returns = "^0.19.0"
reactivex = "^4.0.0"
validator-collection = "^1.5.0"
dependency-injector = "^4.39.1"

[tool.poetry.dev-dependencies]
upbge-stubs = { version = "^0.3.1", allow-prereleases = true }
pytest = "^7.0.1"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
